--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200..900&display=swap')
 
+/*
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200..900&display=swap');
 
 html,
@@ -9,9 +11,10 @@ body,
     height: 100%;
     width: 100%;
     font-family: 'Source Sans 3';
-}
+}*/
 
 /* Track */
+/*
 ::-webkit-scrollbar-track {
     background: #e0e0e0;
 }
@@ -24,3 +27,4 @@ body,
     background: #555;
 }
 
+*/
